# terapiaflow

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
api/: index.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  i18n.tsx  styles.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Billing.tsx  Compliance.tsx  Dashboard.tsx  Episodes.tsx  Exercises.tsx  Patients.tsx  Sessions.tsx
src/terapiaflow/: __init__.py  ai.py  api.py  cli.py  demo.py  models.py  store.py  videos.py
