[project]
name = "terapiaflow"
version = "0.1.0"
description = "PT compliance & progress platform for Morelia clinics (CFDI 4.0, NOM-004-SSA3, COFEPRIS)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
]

[project.scripts]
terapiaflow = "terapiaflow.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
